Revert "structural file change due to typescript not taking .ts files for its workers"
This reverts commit 9411a91c4c1e4fefce68f53d3de28605adf3908d.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pathfinder</title>
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel='stylesheet' type='text/css' media='screen' href='main/src/assets/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='src/assets/main.css'>
 
 </head>
 
